@@ -6,6 +6,7 @@
 * Update - Link customer name on transaction detail page to filtered transaction list page.
 * Update - Test mode notice width is now consistent across all pages.
 * Add - New notification to urge setting SSL for checkout pages if store doesn't use HTTPS
+* Fix - Fixed connection timeout configuration.
 
 = 1.8.0 - 2020-12-16 =
 * Add - Include information about failing payment into order notes.
